[package]
name = "nuitrack-rs"
version = "0.1.0"
authors = ["tom"]
build = "build.rs"

[build-dependencies]
bindgen = "0.43.1"
cc = "1.0.25"

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
snap = "0.2"

[dev-dependencies]
nannou = { git = "https://github.com/nannou-org/nannou", branch = "v0.9" }
vulkano = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }

[replace]
"vulkano:0.11.1" = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
